my first git code

--- a/GitSecondCode.HTML
+++ b/GitSecondCode.HTML
@@ -1159,6 +1159,8 @@ editableText.addEventListener('input', function(){
   localStorage.setItem('savedText',this.textContent);
 })
 </script>
+<h1>Lorem ipsum dolor sit amet consectetur.</h1>
+<h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h1>
     
 </body>
 </html>
