--- a/Yuva File First Code.HTML
+++ b/Yuva File First Code.HTML
@@ -1163,6 +1163,8 @@ editableText.addEventListener('input', function(){
 <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h1>
 <h5>Lorem ipsum dolor sit amet consectetur.</h5>
 <h4>Lorem ipsum dolor sit amet.</h4>
+<h3>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</h3>
+<h3>Lorem ipsum dolor sit amet consectetur.</h3>
     
 </body>
 </html>
